# emscripten-night

./: .babelrc  .gitignore  package-lock.json  package.json  webpack.config.js
crate/: .gitignore  Cargo.toml
crate/emscripten-night/: Cargo.toml
crate/pkg/: emscripten_night_bg.d.ts  emscripten_night_bg.wasm  package.json
crate/src/: lib.rs
src/: index.ts  webgl-sobel.ts
src/shader/: sobel.frag  sobel.vert
template/: index.html
