[package]
name = "emscripten-night"
version = "0.1.0"
authors = ["Kakeru Ishii <i.kakeru@grimoire.gl>"]
edition = "2018"

[dependencies]
wasm-bindgen = "0.2"
cfg-if = "0.1.5"
palette = "0.4"
# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.5", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
wee_alloc = { version = "0.4.2", optional = true }

[lib]
crate-type = ["cdylib"]

[dependencies.web-sys]
version = "0.3"